syntax = "proto3";

package widget.v1;

message Button {
  bool value = 1;
  string label = 2;
  bool disabled = 3;
}

message Checkbox {
  bool value = 1;
  string label = 2;
  bool default_value = 3;
  bool required = 4;
  bool disabled = 5;
}

message CheckboxGroup {
  repeated int32 value = 1;
  string label = 2;
  repeated string options = 3;
  repeated int32 default_value = 4;
  bool required = 5;
  bool disabled = 6;
}

message ColumnItem {
  double weight = 1;
}

message Columns {
  int32 columns = 1;
}

message DateInput {
  optional string value = 1;
  string label = 2;
  string placeholder = 3;
  optional string default_value = 4;
  bool required = 5;
  bool disabled = 6;
  string format = 7;
  string max_value = 8;
  string min_value = 9;
}

message DateTimeInput {
  optional string value = 1;
  string label = 2;
  string placeholder = 3;
  optional string default_value = 4;
  bool required = 5;
  bool disabled = 6;
  string format = 7;
  string max_value = 8;
  string min_value = 9;
}

message Form {
  bool value = 1;
  string button_label = 2;
  bool button_disabled = 3;
  bool clear_on_submit = 4;
}

message Markdown {
  string body = 1;
}

message MultiSelect {
  repeated int32 value = 1;
  string label = 2;
  repeated string options = 3;
  string placeholder = 4;
  repeated int32 default_value = 5;
  bool required = 6;
  bool disabled = 7;
}

message NumberInput {
  optional double value = 1;
  string label = 2;
  string placeholder = 3;
  optional double default_value = 4;
  bool required = 5;
  bool disabled = 6;
  optional double max_value = 7;
  optional double min_value = 8;
}

message Radio {
  optional int32 value = 1;
  string label = 2;
  repeated string options = 3;
  optional int32 default_value = 4;
  bool required = 5;
  bool disabled = 6;
}

message Selectbox {
  optional int32 value = 1;
  string label = 2;
  repeated string options = 3;
  string placeholder = 4;
  optional int32 default_value = 5;
  bool required = 6;
  bool disabled = 7;
}

message Table {
  bytes data = 1;
  TableValue value = 2;
  string header = 3;
  string description = 4;
  optional int32 height = 5;
  repeated string column_order = 6;
  string on_select = 7;
  string row_selection = 8;
}

message TableValue {
  optional TableValueSelection selection = 1;
}

message TableValueSelection {
  int32 row = 1;
  repeated int32 rows = 2;
}

message TextArea {
  optional string value = 1;
  string label = 2;
  string placeholder = 3;
  optional string default_value = 4;
  bool required = 5;
  bool disabled = 6;
  optional int32 max_length = 7;
  optional int32 min_length = 8;
  optional int32 max_lines = 9;
  optional int32 min_lines = 10;
  bool auto_resize = 11;
}

message TextInput {
  optional string value = 1;
  string label = 2;
  string placeholder = 3;
  optional string default_value = 4;
  bool required = 5;
  bool disabled = 6;
  optional int32 max_length = 7;
  optional int32 min_length = 8;
}

message TimeInput {
  optional string value = 1;
  string label = 2;
  string placeholder = 3;
  optional string default_value = 4;
  bool required = 5;
  bool disabled = 6;
}

message Widget {
  string id = 1;
  oneof type {
    Button button = 2;
    Checkbox checkbox = 3;
    CheckboxGroup checkbox_group = 4;
    ColumnItem column_item = 5;
    Columns columns = 6;
    DateInput date_input = 7;
    DateTimeInput date_time_input = 8;
    Form form = 9;
    Markdown markdown = 10;
    MultiSelect multi_select = 11;
    NumberInput number_input = 12;
    Radio radio = 13;
    Selectbox selectbox = 14;
    Table table = 15;
    TextArea text_area = 16;
    TextInput text_input = 17;
    TimeInput time_input = 18;
  }
}
